--- a/View/Main/ComposeTypeView/ComposeTypeButton.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeButton.xib
@@ -32,7 +32,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="q01-6l-ftM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LhR-Ep-x7I"/>
                 <constraint firstAttribute="trailing" secondItem="2KM-dQ-Oxg" secondAttribute="trailing" id="Nii-dz-sG7"/>
