--- a/View/Main/ComposeTypeView/ComposeTypeView.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,31 +12,59 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeView" customModule="WB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAK-4V-ypU">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2C1-tE-G7F">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="compose_slogan.png" translatesAutoresizingMaskIntoConstraints="NO" id="TaU-x1-kyK">
-                                <rect key="frame" x="111" y="20" width="154" height="48"/>
+                                <rect key="frame" x="130" y="20" width="154" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="154" id="FQT-v8-gLl"/>
                                     <constraint firstAttribute="height" constant="48" id="LLv-rP-PHO"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-wh-v5i">
-                                <rect key="frame" x="0.0" y="768" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzv-OG-AWS" userLabel="关闭按钮">
+                                        <rect key="frame" x="197" y="12" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="4tg-fv-0tX"/>
+                                            <constraint firstAttribute="height" constant="20" id="qvG-i5-4iw"/>
+                                        </constraints>
+                                        <state key="normal" image="tabbar_compose_background_icon_close.png"/>
+                                        <connections>
+                                            <action selector="closeBtnClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="D8Q-3B-UbD"/>
+                                        </connections>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3We-iJ-7B2" userLabel="返回按钮">
+                                        <rect key="frame" x="197" y="12" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="TeJ-gR-exA"/>
+                                            <constraint firstAttribute="height" constant="20" id="eJD-P1-GUG"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="tabbar_compose_background_icon_return.png"/>
+                                        <connections>
+                                            <action selector="returnBtnClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="oxL-1F-mgP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="f1L-De-53K"/>
+                                    <constraint firstItem="mzv-OG-AWS" firstAttribute="centerY" secondItem="5sH-wh-v5i" secondAttribute="centerY" id="3r3-xB-gYR"/>
+                                    <constraint firstItem="mzv-OG-AWS" firstAttribute="centerX" secondItem="5sH-wh-v5i" secondAttribute="centerX" id="MRG-gS-vXI"/>
+                                    <constraint firstItem="3We-iJ-7B2" firstAttribute="centerX" secondItem="5sH-wh-v5i" secondAttribute="centerX" id="eeb-V5-ZTL"/>
+                                    <constraint firstItem="3We-iJ-7B2" firstAttribute="centerY" secondItem="5sH-wh-v5i" secondAttribute="centerY" id="fXj-m7-IbL"/>
+                                    <constraint firstAttribute="height" constant="44" id="lln-dy-GtJ"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzF-aD-97V">
-                                <rect key="frame" x="0.0" y="484" width="375" height="224"/>
+                                <rect key="frame" x="0.0" y="408" width="414" height="224"/>
                                 <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="224" id="6Mg-JN-eqD"/>
@@ -64,10 +92,18 @@
                 <constraint firstAttribute="trailing" secondItem="MAK-4V-ypU" secondAttribute="trailing" id="lFb-Ju-bkc"/>
                 <constraint firstItem="MAK-4V-ypU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vgE-IV-V8G"/>
             </constraints>
-            <point key="canvasLocation" x="-371" y="-253"/>
+            <connections>
+                <outlet property="closeBtnConstraint" destination="MRG-gS-vXI" id="mWK-TL-Xlh"/>
+                <outlet property="returnBtn" destination="3We-iJ-7B2" id="eYl-ov-bEv"/>
+                <outlet property="returnBtnConstraint" destination="eeb-V5-ZTL" id="tpJ-mG-dLh"/>
+                <outlet property="scrollView" destination="KzF-aD-97V" id="5h7-sp-bvp"/>
+            </connections>
+            <point key="canvasLocation" x="-772" y="-397"/>
         </view>
     </objects>
     <resources>
         <image name="compose_slogan.png" width="154" height="48"/>
+        <image name="tabbar_compose_background_icon_close.png" width="26" height="26"/>
+        <image name="tabbar_compose_background_icon_return.png" width="26" height="26"/>
     </resources>
 </document>
