--- a/View/Main/ComposeTypeView/ComposeTypeView.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,27 +12,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeView" customModule="WB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAK-4V-ypU">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2C1-tE-G7F">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="compose_slogan.png" translatesAutoresizingMaskIntoConstraints="NO" id="TaU-x1-kyK">
-                                <rect key="frame" x="130" y="20" width="154" height="48"/>
+                                <rect key="frame" x="83" y="50" width="154" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="154" id="FQT-v8-gLl"/>
                                     <constraint firstAttribute="height" constant="48" id="LLv-rP-PHO"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-wh-v5i">
-                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzv-OG-AWS" userLabel="关闭按钮">
-                                        <rect key="frame" x="197" y="12" width="20" height="20"/>
+                                        <rect key="frame" x="150" y="12" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="4tg-fv-0tX"/>
                                             <constraint firstAttribute="height" constant="20" id="qvG-i5-4iw"/>
@@ -43,7 +43,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3We-iJ-7B2" userLabel="返回按钮">
-                                        <rect key="frame" x="197" y="12" width="20" height="20"/>
+                                        <rect key="frame" x="150" y="12" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="TeJ-gR-exA"/>
                                             <constraint firstAttribute="height" constant="20" id="eJD-P1-GUG"/>
@@ -64,8 +64,8 @@
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzF-aD-97V">
-                                <rect key="frame" x="0.0" y="408" width="414" height="224"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="0.0" y="152" width="320" height="224"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="224" id="6Mg-JN-eqD"/>
                                 </constraints>
@@ -76,7 +76,7 @@
                             <constraint firstAttribute="trailing" secondItem="KzF-aD-97V" secondAttribute="trailing" id="F0I-u7-hsU"/>
                             <constraint firstAttribute="bottom" secondItem="5sH-wh-v5i" secondAttribute="bottom" id="Or3-X0-sIp"/>
                             <constraint firstItem="5sH-wh-v5i" firstAttribute="top" secondItem="KzF-aD-97V" secondAttribute="bottom" constant="60" id="X6N-Cq-Imb"/>
-                            <constraint firstItem="TaU-x1-kyK" firstAttribute="top" secondItem="2C1-tE-G7F" secondAttribute="top" constant="20" id="X6t-V8-GPi"/>
+                            <constraint firstItem="TaU-x1-kyK" firstAttribute="top" secondItem="2C1-tE-G7F" secondAttribute="top" constant="50" id="X6t-V8-GPi"/>
                             <constraint firstAttribute="trailing" secondItem="5sH-wh-v5i" secondAttribute="trailing" id="XZO-HZ-Vh8"/>
                             <constraint firstItem="KzF-aD-97V" firstAttribute="leading" secondItem="2C1-tE-G7F" secondAttribute="leading" id="t9r-Xw-q4T"/>
                             <constraint firstItem="TaU-x1-kyK" firstAttribute="centerX" secondItem="2C1-tE-G7F" secondAttribute="centerX" id="wce-Z6-Xha"/>
@@ -103,7 +103,7 @@
     </objects>
     <resources>
         <image name="compose_slogan.png" width="154" height="48"/>
-        <image name="tabbar_compose_background_icon_close.png" width="26" height="26"/>
-        <image name="tabbar_compose_background_icon_return.png" width="26" height="26"/>
+        <image name="tabbar_compose_background_icon_close.png" width="25" height="25"/>
+        <image name="tabbar_compose_background_icon_return.png" width="25" height="25"/>
     </resources>
 </document>
