--- a/表情键盘/表情键盘/View/EmotionInputView.xib
+++ b/表情键盘/表情键盘/View/EmotionInputView.xib
@@ -22,15 +22,18 @@
                         <constraint firstAttribute="height" constant="44" id="3T1-Ed-1SW"/>
                     </constraints>
                 </view>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sM1-sQ-xaL">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sM1-sQ-xaL">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="209"/>
-                    <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oCj-dd-lGY">
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="oCj-dd-lGY" customClass="EmotionLayout" customModule="表情键盘" customModuleProvider="target">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="h4s-p2-en1" id="hPG-MC-Yb5"/>
+                    </connections>
                 </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="0.60731336810000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,7 +53,7 @@
                 <outlet property="collectionView" destination="sM1-sQ-xaL" id="jBh-cE-Aqe"/>
                 <outlet property="toolbar" destination="fh5-Ov-JKr" id="REm-7S-b80"/>
             </connections>
-            <point key="canvasLocation" x="-186" y="-137"/>
+            <point key="canvasLocation" x="-648" y="-176"/>
         </view>
     </objects>
 </document>
